Updated BrowserType in Download Clothes Reusable Component

--- a/src/Week 7/DownloadClothes-ReusableComponent.xaml
+++ b/src/Week 7/DownloadClothes-ReusableComponent.xaml
@@ -68,7 +68,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:OpenBrowser BrowserType="{x:Null}" CommunicationMethod="{x:Null}" Hidden="{x:Null}" NewSession="{x:Null}" Private="{x:Null}" UiBrowser="{x:Null}" DisplayName="Open Browser" sap:VirtualizedContainerService.HintSize="492,650.4" sap2010:WorkflowViewState.IdRef="OpenBrowser_2" Url="[clothesAddress]">
+    <ui:OpenBrowser CommunicationMethod="{x:Null}" Hidden="{x:Null}" NewSession="{x:Null}" Private="{x:Null}" UiBrowser="{x:Null}" BrowserType="Firefox" DisplayName="Open Browser" sap:VirtualizedContainerService.HintSize="492,650.4" sap2010:WorkflowViewState.IdRef="OpenBrowser_2" Url="[clothesAddress]">
       <ui:OpenBrowser.Body>
         <ActivityAction x:TypeArguments="x:Object">
           <ActivityAction.Argument>
